# Sahayak

./: .gitignore  LICENSE  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  requirements.txt  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/0dcbb3f0-ee9f-4a4a-8224-43d885ff5583/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/0dcbb3f0-ee9f-4a4a-8224-43d885ff5583/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000011
qdrant_storage/collections/docs/0/segments/260070cd-c74b-4e1c-9dd0-4950c2b3e8a4/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000011
qdrant_storage/collections/docs/0/segments/26726f70-ce5b-49e2-bcaf-944c99bd77bf/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000011
qdrant_storage/collections/docs/0/segments/588f1aba-933d-4d0d-bbe7-a8bca18d463a/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/ffe724bc-e2d8-4cec-abbf-bbcc221fa59a/: mutable_id_tracker.mappings
server/: .env.sample  package-lock.json  package.json
server/src/: app.js
server/src/config/: passport.js
server/src/controller/: user.controller.js
server/src/middlewares/: auth.middleware.js
server/src/models/: user.model.js
server/src/routes/: user.routes.js
server/src/utils/: ErrorHandler.js  ErrorWrapper.js
test/: check_health.py  test_ingest.py  test_inngest_direct.py  test_query.py  verify_qdrant.py
(+20 files in other folders)
